# llm-perf-opt

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GEMINI.md  METRICS-PROFILED.md  README.md  STATIC_ANALYZER_IMPLEMENTATION.md  VISION_STAGE_FLOPS_FIX.md  bootstrap.sh  mkdocs.yml  pyproject.toml  test_static_analyzer.py
.codex/: auth.json  config.toml  history.jsonl  version.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
conf/: README.md  config.yaml
conf/dataset/: README.md  omnidocbench.yaml
conf/dataset/sampling/: default.yaml  random.yaml
conf/hardware/: README.md
conf/hydra/: README.md
conf/model/: README.md  deepseek_ocr.yaml
conf/output/direct/: default.yaml
conf/output/torch/: default.yaml
conf/profiling/: README.md
conf/profiling/ncu/: default.yaml  ncu.default.yaml  ncu.high.yaml  ncu.rtx3090.compute.yaml  ncu.rtx3090.memory.yaml  ncu.rtx3090.yaml
conf/profiling/nsys/: default.yaml  nsys.default.yaml
conf/profiling/torch/: torch-profiler.default.yaml  torch-profiler.max.yaml  torch-profiler.min.yaml
conf/runner/: stage2.yaml
conf/runners/: stage1.default.yaml  stage1.no-static.yaml
conf/runtime/: README.md
context/: README.md
context/design/: README.md  dsocr-callgraph-human-friendly.md  metrics-to-watch.md
context/hints/: README.md  about-h20-gpu-specs.md  howto-deepseek-ocr-inference.md  howto-hydra-omegaconf-fvcore-registry.md  howto-install-cuda-toolkit-pixi.md  howto-ncu-profile-kernel-call-stack.md  howto-ncu-profile-llm-top-kernel.md  howto-ncu-profile-specific-kernel.md  howto-ncu-speed-of-light-llm.md  howto-profile-deepseek-ocr-with-nsight.md  howto-pytorch-flop-count-nn-module.md  howto-scale-ncu-kernel-analytics-over-many-models.md  howto-split-forward-flops-tensor-core-vs-cuda-core.md  howto-use-ncu-for-compute-vs-memory-cache-bandwidth.md  howto-use-rtx5090-environment.md
context/hints/dsocr-kb/: README.md  (+8 more)
context/instructions/: README.md  install-cuda-12.8-ubuntu.md
context/issues/: README.md
context/logs/: README.md
context/plans/: README.md  plan-analytical-hook-run.md  plan-deep-profile-llm.md  plan-dsocr-callgraph-grouping.md  plan-dsocr-callgraph-option-a-implementation.md  plan-dsocr-callgraph-option-c-monkeypatch.md  plan-per-stage-static-analysis.md  plan-prefill-decode-analytic.md  plan-wan2-1-analytic-model.md  plan-wan2-1-full-pipeline-analytic-model.md  plan-wan2-1-layer-impl-switch.md  plan-wan21-profiling.md
context/refcode/: README.md  huggingface
context/roles/: README.md
context/rules/: README.md
context/skills/: README.md
context/summaries/: README.md  explain-llm-profile-runner-timing.md  issue-pytorch-profiler-zero-cuda-time.md
context/tasks/: README.md  req-wan21-profiling.md  task-anything.md  task-direct-inference.md
context/tools/: README.md
datasets/: .gitignore  README.md
datasets/omnidocbench/: README.md  bootstrap.sh  bootstrap.yaml
docs/: analyzer-mfu.md  artifacts.md  configuration.md  getting-started.md  index.md  internals.md  running.md  troubleshooting.md  visualization.md
docs/deepseek-ocr/: kernel-format.md
explore/: README.md
explore/ncu-simple/: ncu-profile-dummy.sh  run-dummy-model.py
models/: .gitignore  README.md  bootstrap.sh  bootstrap.yaml  deepseek-ocr
models/wan2.1-t2v-14b/: README.md  bootstrap.sh
reports/: .gitignore  analytical-analysis-report.md  deepseek-ocr-analytical-arch-report.md  deepseek-ocr-analytical-perf-report.md  deepseek-ocr-analytical-summary.cn.md  deepseek-ocr-analytical-summary.md  deepseek-ocr-analytical-summary.v2.cn.md  final-report-template.md  report-template-for-analytical-model-arch.md  report-template-for-analytical.md  section-numbering.lua
reports/20251107-dsocr/: REPORT_VERSIONS.md  final-report-v1.md  final-report-v2-chinese-wide.html  final-report-v2-chinese.html  final-report-v2-chinese.md  final-report-v2-review.md  final-report-v2.html  final-report-v2.md  kernel-info.yaml
reports/helpers/: generate_memory_requirement_table.py
scripts/: README.md  bootstrap-symlinks.sh  data-pack.yaml  deepseek-ocr-generate-vis.py  deepseek-ocr-infer-one.py  deepseek-ocr-static-analysis.py  inspect-deepseek-ocr-infer.py  inspect_model_structure.py  install-cuda-toolkit-12-8.sh  install-deps-rtx5090.sh  install-vllm-nightly.sh  ncu-profile-top-kernel-lite.sh  ncu-profile-top-kernel-no-pixi.sh  ncu-profile-top-kernel-pixi-shell.sh  ncu-profile-top-kernel.sh  stage-all-run.sh  verify-rtx5090.sh
scripts/analytical/: README.md  dsocr_analytic_what_if.py  dsocr_callgraph_by_hook.py  dsocr_callgraph_by_torchlens_adv.py  dsocr_callgraph_by_torchlens_basic.py  dsocr_find_static_components.py  dsocr_parse_callgraph.py  dsocr_parse_callgraph_by_torchlens_adv.py  dsocr_parse_callgraph_by_torchlens_basic.py  dsocr_static_transform_graph_no_torch.py  dsocr_torchlens_callgraph.py  dsocr_torchlens_callgraph_option_c.py
scripts/nsys/: nsys-profile-dsocr-stages.sh
scripts/wan2_1/: gpu_idle_check.py  metrics_schema.py  wan21_profile.py
specs/001-deepseek-ocr-modelmeter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-nvidia-llm-profiling/: spec.md
specs/001-profile-deepseek-ocr/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-nvidia-llm-profiling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-nvtx-ncu-profiling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-deepseek-ocr-modelmeter/: spec.md
specs/004-wan2-1-analytic-model/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-wan2-1-full-pipeline/: spec.md
src/: README.md
src/llm_perf_opt/: README.md
src/llmprof/: README.md  __init__.py
tests/: README.md
tests/integration/: README.md
tests/manual/: README.md  deepseek_ocr_hf_manual.py  manual_stage1_benchmark.py  manual_stage1_benchmark_inproc.py
tests/unit/: README.md  test_kernels_export.py  test_stakeholder_summary.py
(+738 files in other folders)
